src/local_code/cwave-k8s/practice/service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata: 
  name: alb-ingress-class
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    name: ingress
spec:
  ingressClassName: "alb-ingress-class"
  rules:
  #nginx
  - host: nginx.duldul7479.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-lb
            port: 
              number: 80
  #goapp
  - host: goapp.duldul7479.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goapp-lb
            port: 
              number: 80
